--- a/themes/default/layouts/index.html
+++ b/themes/default/layouts/index.html
@@ -1,21 +1,16 @@
 {{ partial "header.html" . }}
 
-<section>
+{{ partial "earth.html" . }}
 
-  <h1> Home </h1>
+<section id="main">
+
+  <h1 class="light-switch"> Home </h1>
 
   {{- range first 10 .Data.Pages -}}
-  {{- if eq .Type "article" }}
-  {{- .Render "li" }}
-  {{- end -}}
 
   {{- if eq .Type "post" }}
   {{- .Render "li" }}
   {{- end }}
-
-  {{- if eq .Type "page" }}
-  {{- .Render "li" }}
-  {{- end -}}
 
   {{- end }}
 
