--- a/themes/default/layouts/partials/footer.html
+++ b/themes/default/layouts/partials/footer.html
@@ -2,8 +2,8 @@
 <footer>
 
 <div id="legal-notice">
-  <p> © Pierre Lespingal 2016 - pierre.lespingal@gmail.com </p>
-  <p>Powered by <a href="http://gohugo.io" target="_blank" rel="nofollow">Hugo</a><p>
+  <p class="light-switch"> © Pierre Lespingal 2016 - pierre.lespingal@gmail.com </p>
+  <p class="light-switch">Powered by <a href="http://gohugo.io" target="_blank" rel="nofollow">Hugo</a><p>
 </div>
 
 </footer>
