--- a/themes/default/layouts/partials/header.html
+++ b/themes/default/layouts/partials/header.html
@@ -4,33 +4,44 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/earth.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Slab" />
-    <title>{{ .Title }}</title>
+    <title>Somewhere on Earth - {{ .Title }}</title>
   </head>
   <body>
 
     <header>
 
       <div id="main-title">
-        <a href="{{ .Site.BaseURL }}"><h1>Around the world</h1></a>
+        <a href="{{ .Site.BaseURL }}"><h1 class="light-switch" >Somewhere on Earth</h1></a>
       </div>
 
       <div id="main-undertitle">
-        <img class="underline" alt="" src="{{ $.Site.BaseURL }}images/undertitle.svg">
-        <img class="earth" alt="" src="{{ $.Site.BaseURL }}images/earth.svg">
-        <img class="underline" alt="" src="{{ $.Site.BaseURL }}images/undertitle.svg">
+        <img class="underline" alt="" src="{{ $.Site.BaseURL }}images/undertitle_neg.svg">
+        <img id="earth-logo" class="earth" alt="" src="{{ $.Site.BaseURL }}images/earth.svg">
+        <img class="underline" alt="" src="{{ $.Site.BaseURL }}images/undertitle_neg.svg">
       </div>
 
     </header>
 
-    <nav>
+    <nav id="main-nav">
 
       <ul>
-        <li class="nav-link"> <a href="{{ .Site.BaseURL }}/article/about"> About </a> </li>
+        <li class="nav-link"> <a href="{{ .Site.BaseURL }}article/about"> About </a> </li>
         <li class="nav-link"> <a href="{{ .Site.BaseURL }}article"> Articles </a> </li>
         <li class="nav-dumb"> </li>
-        <li class="nav-link"> <a href="{{ .Site.BaseURL }}post"> Posts </a> </li>
-        <li class="nav-link"> <a href="{{ .Site.BaseURL }}/Gallery"> Gallery </a> </li>
+        <li class="nav-link"> <a href="{{ .Site.BaseURL }}country"> Country </a> </li>
+        <li class="nav-link"> <a href="{{ .Site.BaseURL }}gallery"> Gallery </a> </li>
+      </ul>
+
+    </nav>
+
+    <nav id="earth-nav">
+
+      <ul>
+        <li class="nav-link"> <a id="post-link" href="{{ .Site.BaseURL }}"> Posts </a> </li>
+        <li class="nav-dumb"> </li>
+        <li class="nav-link"> <a id="gallery-link" href="{{ .Site.BaseURL }}"> Gallery </a> </li>
       </ul>
 
     </nav>
