--- a/themes/sloth/layouts/article/single.html
+++ b/themes/sloth/layouts/article/single.html
@@ -2,11 +2,12 @@
 
 <section country="none">
 
-  <h1 id="title" class="light-switch" >{{ .Title }}</h1>
+  <h1 id="title" class="light-switch script-font" >{{ .Title }}</h1>
 
   <div id="main">
 
     <article>
+
 
       <div class="article">
         {{ .Content }}
