--- a/themes/sloth/layouts/gallery/single.html
+++ b/themes/sloth/layouts/gallery/single.html
@@ -2,7 +2,7 @@
 
 <section country="{{ .Params.country }}">
 
-  <h1 id="title" class="light-switch" ></h1>
+  <h1 id="title" class="light-switch script-font" ></h1>
 
   <div id="main">
 
