--- a/themes/sloth/layouts/index.html
+++ b/themes/sloth/layouts/index.html
@@ -2,7 +2,7 @@
 
 <section country="none">
 
-  <h1 id="title" class="light-switch"> Home </h1>
+  <h1 id="title" class="light-switch script-font"> Home </h1>
 
   <div id="main">
 
