--- a/themes/sloth/layouts/_default/li.html
+++ b/themes/sloth/layouts/_default/li.html
@@ -3,10 +3,12 @@
     <a href="{{ .Permalink }}">
       <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/thumbnail/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }});">
       </div>
+      <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/frame.svg);">
+      </div>
       <div class="item-frame">
-        <svg width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
+        <!-- <svg width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
           <path d="M 0 100 L 0 65 L 100 80 L 100 100 Z" />
-        </svg>
+        </svg> -->
       </div>
       <div class="item-shape">
       </div>
