--- a/themes/sloth/layouts/_default/single.html
+++ b/themes/sloth/layouts/_default/single.html
@@ -2,11 +2,15 @@
 
 <section country="{{ .Section }}">
 
-  <h1 id="title" class="light-switch" >{{ .Title }}</h1>
+  <h1 id="title" class="light-switch script-font" >{{ .Title }}</h1>
 
     <div id="main">
 
       <article>
+
+      <h4>
+        {{ .Date.Format "2006, 1 of January" }}
+      </h4>
 
         {{ .Content }}
 
