--- a/themes/sloth/layouts/country/li.html
+++ b/themes/sloth/layouts/country/li.html
@@ -3,10 +3,9 @@
     <a href="{{ $.Site.BaseURL }}{{ .Params.path }}/">
       <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/flag/{{ with .Params.image }}{{ . }}{{ else }}default.jpeg{{ end }});">
       </div>
+      <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/frame.svg);">
+      </div>
       <div class="item-frame">
-        <svg width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
-          <path d="M 0 100 L 0 65 L 100 80 L 100 100 Z" style="fill: #FFFFFF77; stroke: none;"/>
-        </svg>
       </div>
       <div class="item-shape">
       </div>
