--- a/themes/sloth/layouts/partials/header.html
+++ b/themes/sloth/layouts/partials/header.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css">
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/earth.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css"/>
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/earth.css"/>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Slab" />
-    <LINK rel="SHORTCUT ICON" href="/images/earth.ico">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <title>Somewhere on Earth - {{ .Title }}</title>
   </head>
   <body>
 
     <header id="header" class="day">
 
-      <div id="header-wrap">
+      <div id="header-wrap" class="script-font">
 
         <div id="main-title">
           <a href="{{ .Site.BaseURL }}"><h1 class="light-switch" >Somewhere on Earth</h1></a>
@@ -29,7 +29,7 @@
           <img class="underline" alt="" src="{{ $.Site.BaseURL }}/images/undertitle_neg.svg">
         </div>
 
-        <div id="nav-wrap">
+        <div id="nav-wrap" class="funky-link">
 
           <nav id="main-nav">
 
@@ -45,7 +45,7 @@
 
           <nav id="earth-nav">
 
-            <ul>
+            <ul id="earth-ul">
               <li class="nav-link"> <a id="post-link" href="{{ .Site.BaseURL }}">
                   <!-- <svg width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
                     <path d="M 0 0 L 100 0 L 90 100 L 10 100 Z" style="fill: #FFFFFF77; stroke: none;"/>
@@ -54,6 +54,8 @@
               <li class="nav-dumb"> </li>
               <li class="nav-link"> <a id="gallery-link" href="{{ .Site.BaseURL }}"> Gallery </a> </li>
             </ul>
+
+            <h1 id="country-name"></h1>
 
           </nav>
 
