--- a/themes/sloth/layouts/country/li.html
+++ b/themes/sloth/layouts/country/li.html
@@ -1,6 +1,6 @@
 <div class="item-ratio">
   <div class="item">
-    <a href="{{ $.Site.BaseURL }}{{ .Params.path }}/">
+    <a href="{{ $.Site.BaseURL }}/{{ .Params.path }}/">
       <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/flag/{{ with .Params.image }}{{ . }}{{ else }}default.jpeg{{ end }});">
       </div>
       <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/frame.svg);">
