--- a/themes/sloth/layouts/partials/footer.html
+++ b/themes/sloth/layouts/partials/footer.html
@@ -1,12 +1,14 @@
 
 <footer>
 
-<div id="legal-notice">
-  <p class="light-switch"> Build with love by © Pierre Lespingal 2016 - pierre.lespingal@gmail.com </p>
-  <p class="light-switch funky-link">Powered by <a href="http://gohugo.io" target="_blank" rel="nofollow">Hugo</a><p>
-</div>
+  <div id="legal-notice">
+    <p class="light-switch"> Build with love by © Pierre Lespingal 2016 - pierre.lespingal@gmail.com </p>
+    <p class="light-switch funky-link">Powered by <a href="http://gohugo.io" target="_blank" rel="nofollow">Hugo</a></p>
+  </div>
 
 </footer>
+
+</div>
 
 </body>
 </html>
