--- a/themes/sloth/layouts/section/country.html
+++ b/themes/sloth/layouts/section/country.html
@@ -2,7 +2,7 @@
 
 <section country="none">
 
-  <h1 id="title" class="light-switch script-font"> Countries </h1>
+  <h1 id="title" class="script-font"> Countries </h1>
 
   <div id="main">
     {{- range first 10 .Data.Pages }}
