--- a/themes/sloth/layouts/article/single.html
+++ b/themes/sloth/layouts/article/single.html
@@ -2,7 +2,7 @@
 
 <section country="none">
 
-  <h1 id="title" class="light-switch script-font" >{{ .Title }}</h1>
+  <h1 id="title" class="script-font" >{{ .Title }}</h1>
 
   <div id="main">
 
