--- a/themes/sloth/layouts/country/single.html
+++ b/themes/sloth/layouts/country/single.html
@@ -2,7 +2,7 @@
 
 <section country="{{ .Params.country }}">
 
-  <h1 id="title" class="light-switch script-font">{{ .Title }}</h1>
+  <h1 id="title" class="script-font" >{{ .Title }}</h1>
 
   <div id="main">
 
