--- a/themes/sloth/layouts/partials/header.html
+++ b/themes/sloth/layouts/partials/header.html
@@ -2,62 +2,63 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
 
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css"/>
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/earth.css"/>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Slab" />
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="/images/favicon.ico"/>
     <title>Somewhere on Earth - {{ .Title }}</title>
   </head>
-  <body>
+  <body class="switch day">
 
-    <header id="header" class="day">
+    <div id="container">
 
-      <div id="header-wrap" class="script-font">
+    <header id="header" class="switch day">
 
-        <div id="main-title">
-          <a href="{{ .Site.BaseURL }}"><h1 class="light-switch" >Somewhere on Earth</h1></a>
+      <div id="header-wrap" class="script-font switch day">
+
+        <div class="main-title switch day" id="first-title">
+          <a href="{{ .Site.BaseURL }}"><h1 class="switch day">Somewhere...</h1></a>
         </div>
 
-        <div id="second-title">
-          <h1 class="light-switch" >Travel blog</h1>
+        <div class="main-title switch day" id="second-title">
+          <a href="{{ .Site.BaseURL }}"><h1 class="switch day" >...on Earth</h1></a>
         </div>
 
         <div id="main-undertitle">
-          <img class="underline" alt="" src="{{ $.Site.BaseURL }}/images/undertitle_neg.svg">
-          <img id="earth-logo" class="earth" alt="" src="{{ $.Site.BaseURL }}/images/earth.svg">
-          <img class="underline" alt="" src="{{ $.Site.BaseURL }}/images/undertitle_neg.svg">
+          <!--<div class="underline"><img alt="" src="{{ $.Site.BaseURL }}/images/deco-left.svg"></div>-->
+          <div id="earth-logo" class="earth" ><img alt="Earth has been destroyed" src="{{ $.Site.BaseURL }}/images/earth.svg"></div>
+          <!--<div class="underline"><img alt="" src="{{ $.Site.BaseURL }}/images/deco-left.svg"></div>-->
         </div>
 
-        <div id="nav-wrap" class="funky-link">
+        <h1 id="country-name" class="switch day"></h1>
 
-          <nav id="main-nav">
+        <div id="nav-wrap" class="funky-link switch day">
+
+          <nav id="main-nav" class="switch day">
 
             <ul>
-              <li class="nav-link"> <a href="{{ .Site.BaseURL }}/article/about"> About </a> </li>
-              <li class="nav-link"> <a href="{{ .Site.BaseURL }}/article"> Articles </a> </li>
-              <li class="nav-dumb"> </li>
-              <li class="nav-link"> <a href="{{ .Site.BaseURL }}/country"> Country </a> </li>
-              <li class="nav-link"> <a href="{{ .Site.BaseURL }}/gallery"> Gallery </a> </li>
+              <li class="nav-link left-link"> <a href="{{ .Site.BaseURL }}/article/about"> About </a> </li>
+              <li class="nav-link left-link"> <a href="{{ .Site.BaseURL }}/article"> Articles </a> </li>
+              <li class="nav-link right-link"> <a href="{{ .Site.BaseURL }}/gallery"> Gallery </a> </li>
+              <li class="nav-link right-link"> <a href="{{ .Site.BaseURL }}/country"> Country </a> </li>
             </ul>
 
           </nav>
 
-          <nav id="earth-nav">
+          <nav id="earth-nav" class="switch day">
 
             <ul id="earth-ul">
-              <li class="nav-link"> <a id="post-link" href="{{ .Site.BaseURL }}">
-                  <!-- <svg width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
-                    <path d="M 0 0 L 100 0 L 90 100 L 10 100 Z" style="fill: #FFFFFF77; stroke: none;"/>
-                    </svg> -->
-                    Posts </a> </li>
-              <li class="nav-dumb"> </li>
-              <li class="nav-link"> <a id="gallery-link" href="{{ .Site.BaseURL }}"> Gallery </a> </li>
+              <li class="nav-link left-link"> <a id="post-link" href="{{ .Site.BaseURL }}"> Posts </a> </li>
+              <li class="nav-link right-link"> <a id="gallery-link" href="{{ .Site.BaseURL }}"> Gallery </a> </li>
             </ul>
 
-            <h1 id="country-name"></h1>
-
           </nav>
+
+          <div id="nav-switch">
+            <img alt="" src="{{ $.Site.BaseURL }}/images/switch.svg">
+          </div>
 
         </div>
 
