--- a/themes/sloth/static/css/earth.css
+++ b/themes/sloth/static/css/earth.css
@@ -38,18 +38,59 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 1;
 }
 
-.countryPopup {
+#country-name.day {
+    display: none;
+    margin:0;
+}
+
+#country-name.night {
+    font-size: 1em;
+    color: #FFFFFF;
+    text-align: center;
+    margin: 0;
+}
+
+#country-popup {
     padding: 2px;
     display: none;
     position: fixed;
-    color: white;
-    background-color: #000000;
-    background-color: #10101077;
-    font-size: 1rem;
-    border: solid 2px white;
-    border-radius: 3px;
+    font-size: 0.6rem;
     text-align: center;
+    width: 150px;
+    z-index: 2;
+}
+
+#country-popup img {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+#text-wrap {
+    position: absolute;
+    bottom: 50px;
+    left: 25px;
+    width: 130px;
+    height: 70px;
+    text-align: center;
+}
+
+@media screen and (min-device-width: 0px) and (max-device-width: 550px) {
+    #earth-nav .nav-link {
+        width: 49%;
+    }
+
+    #country-name.night {
+        font-size: 2em;
+    }
+
+    .countryPopup {
+        font-size: 3rem;
+        padding: 0.2rem;
+        border: solid 6px white;
+        border-radius: 6px;
+    }
 }
