faster, better, stronger

--- a/themes/sloth/layouts/index.html
+++ b/themes/sloth/layouts/index.html
@@ -2,9 +2,9 @@
 
 <section country="none">
 
-  <h1 id="title" class="light-switch script-font"> Home </h1>
+  <h1 id="title" class="script-font switch day"> Home </h1>
 
-  <div id="main">
+  <div id="main" class="switch day">
 
     {{- range first 10 .Data.Pages -}}
 
