--- a/themes/sloth/layouts/partials/footer.html
+++ b/themes/sloth/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 
-<footer>
+<footer class="switch day">
 
   <div id="legal-notice">
     <p class="light-switch"> Build with love by © Pierre Lespingal 2016 - pierre.lespingal@gmail.com </p>
