--- a/themes/sloth/layouts/_default/li.html
+++ b/themes/sloth/layouts/_default/li.html
@@ -3,7 +3,7 @@
     <a href="{{ .Permalink }}">
       <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/thumbnail/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }});">
       </div>
-      <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/frame.svg);">
+      <div class="item-image">
       </div>
       <div class="item-frame">
         <!-- <svg width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
@@ -12,7 +12,7 @@
       </div>
       <div class="item-shape">
       </div>
-      <div class="item-title">
+      <div class="item-title script-font">
         <h4>{{ .Title }}</h4>
       </div>
     </a>
