--- a/themes/sloth/layouts/_default/list.html
+++ b/themes/sloth/layouts/_default/list.html
@@ -2,9 +2,9 @@
 
 <section country="{{ if .IsNode }}{{ .URL }}{{ else }}none{{ end }}">
 
-  <h1 id="title" class="script-font"> {{ .Title }} </h1>
+  <h1 id="title" class="script-font switch day"> {{ .Title }} </h1>
 
-  <div id="main">
+  <div id="main" class="switch day">
     {{- range first 10 .Data.Pages }}
     {{ .Render "li" }}
     {{- end }}
