--- a/themes/sloth/layouts/article/single.html
+++ b/themes/sloth/layouts/article/single.html
@@ -2,9 +2,9 @@
 
 <section country="none">
 
-  <h1 id="title" class="script-font" >{{ .Title }}</h1>
+  <h1 id="title" class="script-font switch day" >{{ .Title }}</h1>
 
-  <div id="main">
+  <div id="main" class="switch day">
 
     <article>
 
