--- a/themes/sloth/layouts/gallery/li.html
+++ b/themes/sloth/layouts/gallery/li.html
@@ -9,7 +9,7 @@
       </div>
       <div class="item-shape">
       </div>
-      <div class="item-title">
+      <div class="item-title script-font">
         <h4>{{ .Title }}</h4>
       </div>
     </a>
