--- a/themes/sloth/layouts/article/single.html
+++ b/themes/sloth/layouts/article/single.html
@@ -2,12 +2,11 @@
 
 <section country="none">
 
-  <h1 id="title" class="script-font switch day" >{{ .Title }}</h1>
+  <h1 id="title" class="script-font switch day single" >{{ .Title }}</h1>
 
   <div id="main" class="switch day">
 
     <article>
-
 
       <div class="article">
         {{ .Content }}
