--- a/themes/sloth/layouts/gallery/single.html
+++ b/themes/sloth/layouts/gallery/single.html
@@ -2,7 +2,7 @@
 
 <section country="{{ .Params.country }}">
 
-  <h1 id="title" class="script-font switch day" >{{ .Title }}</h1>
+  <h1 id="title" class="script-font switch day single" >{{ .Title }}</h1>
 
   <div id="main" class="switch day">
 
