--- a/themes/sloth/layouts/index.html
+++ b/themes/sloth/layouts/index.html
@@ -6,7 +6,7 @@
 
   <div id="main" class="switch day">
 
-    {{- range first 10 .Data.Pages -}}
+    {{- range .Data.Pages -}}
 
     {{- if eq .Type "post" }}
     {{- .Render "li" }}
