--- a/themes/sloth/layouts/partials/earth.html
+++ b/themes/sloth/layouts/partials/earth.html
@@ -19,8 +19,10 @@
 <script src="{{ $.Site.BaseURL }}/js/earth/data.js"></script>
 <script src="{{ $.Site.BaseURL }}/js/earth/scene.js"></script>
 <script src="{{ $.Site.BaseURL }}/js/earth/detector.js"></script>
+<script src="{{ $.Site.BaseURL }}/js/earth/blur.js"></script>
 <script src="{{ $.Site.BaseURL }}/js/earth/viewer.js"></script>
 <script src="{{ $.Site.BaseURL }}/js/earth/earth.js"></script>
+<script src="{{ $.Site.BaseURL }}/js/earth/sun.js"></script>
 <script src="{{ $.Site.BaseURL }}/js/earth/path.js"></script>
 <script src="{{ $.Site.BaseURL }}/js/earth/skybox.js"></script>
 <script src="{{ $.Site.BaseURL }}/js/earth/app.js"></script>
