--- a/themes/sloth/layouts/_default/list.html
+++ b/themes/sloth/layouts/_default/list.html
@@ -4,9 +4,27 @@
 
   <h1 id="title" class="script-font switch day"> {{ .Title }} </h1>
 
-  <div id="main" class="switch day">
+  {{ partial "info" . }}
+
+  <!--<div id="dico" class="info">
     {{- range first 10 .Data.Pages }}
+
+    {{- if eq .Type "dico" }}
+    {{- .Content }}
+    {{- end }}
+
+    {{- end }}
+
+  </div>-->
+
+
+    <div id="main" class="switch day">
+    {{- range first 10 .Data.Pages }}
+
+    {{- if eq .Type "post" }}
     {{ .Render "li" }}
+    {{- end }}
+
     {{- end }}
   </div>
 
