--- a/themes/sloth/layouts/partials/header.html
+++ b/themes/sloth/layouts/partials/header.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css"/>
     <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/earth.css"/>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Slab" />
-    <link rel="shortcut icon" href="/images/favicon.ico"/>
     <title>Somewhere on Earth - {{ .Title }}</title>
   </head>
   <body class="switch day">
 
-    <div id="container">
+  <div id="background" class="switch day"></div>
+  <div id="container">
 
     <header id="header" class="switch day">
 
@@ -48,8 +48,8 @@
           <nav id="earth-nav" class="switch day">
 
             <ul>
-              <li class="nav-link left-link switch day"> <a id="post-link" href="{{ .Site.BaseURL }}"> Posts </a> </li>
-              <li class="nav-link right-link switch day"> <a id="gallery-link" href="{{ .Site.BaseURL }}"> Gallery </a> </li>
+              <li class="nav-link left-link funky-link switch day"> <a id="post-link" href="{{ .Site.BaseURL }}"> Posts </a> </li>
+              <li class="nav-link right-link funky-link switch day"> <a id="gallery-link" href="{{ .Site.BaseURL }}"> Gallery </a> </li>
             </ul>
 
           </nav>
