--- a/themes/sloth/layouts/gallery/li.html
+++ b/themes/sloth/layouts/gallery/li.html
@@ -1,7 +1,7 @@
 <div class="item-ratio">
   <div class="item">
     <a href="{{ .Permalink }}">
-      <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/flag/{{ with .Params.image }}{{ . }}{{ else }}default.jpeg{{ end }});">
+      <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/gallery/{{ with .Params.image }}{{ . }}{{ else }}default.jpeg{{ end }});">
       </div>
       <div class="item-image" style="background-image: url({{ $.Site.BaseURL }}/images/frame.svg);">
       </div>
