--- a/themes/sloth/layouts/_default/li.html
+++ b/themes/sloth/layouts/_default/li.html
@@ -12,7 +12,7 @@
       </div>
       <div class="item-shape">
       </div>
-      <div class="item-title script-font">
+      <div class="item-title">
         <h4>{{ .Title }}</h4>
       </div>
     </a>
