--- a/themes/sloth/layouts/_default/list.html
+++ b/themes/sloth/layouts/_default/list.html
@@ -4,9 +4,9 @@
 
   <h1 id="title" class="script-font switch day"> {{ .Title }} </h1>
 
-  {{ partial "info" . }}
+  <!--{{ partial "info" . }}
 
-  <!--<div id="dico" class="info">
+  <div id="dico" class="info">
     {{- range first 10 .Data.Pages }}
 
     {{- if eq .Type "dico" }}
